samples/_failures_safe/1761216841_758a87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f50d869b.c: In function ‘main’:
./samples/SAFE/__tmp_f50d869b.c:156:9: error: expected declaration or statement at end of input
  156 |         }
      |         ^
./samples/SAFE/__tmp_f50d869b.c:156:9: error: expected declaration or statement at end of input
